@@ -19,6 +19,39 @@
 require 'boxgrinder-core/helpers/log-helper'
 
 module BoxGrinder
+
+  # A class tha helps dealing with RPM version numbers
+  #
+  class RPMVersion
+    def split(version)
+      version_array = []
+
+      version.split('-').each do |v|
+        v.split('.').each { |nb| version_array << nb }
+      end
+
+      version_array
+    end
+
+    def compare(v1, v2)
+      s1 = split(v1)
+      s2 = split(v2)
+
+      for i in (0..s1.size-1)
+        cmp = (s1[i].to_i <=> s2[i].to_i)
+        return cmp unless cmp == 0
+      end
+
+      0
+    end
+
+    # Returns newest version from the array
+    #
+    def newest(versions)
+      versions.sort { |x,y| compare(x,y) }.last
+    end
+  end
+
   class LinuxHelper
     def initialize(options = {})
       @log = options[:log] || LogHelper.new
@@ -60,11 +93,14 @@ module BoxGrinder
 
     def kernel_version(guestfs)
       kernel_versions = guestfs.ls("/lib/modules")
-      version = kernel_versions.last
 
+      # By default use the latest available kernel...
+      version = RPMVersion.new.newest(kernel_versions)
+
+      # ...but prefer xen or PAE kernel over others
       if kernel_versions.size > 1
         kernel_versions.each do |v|
-          if v.match(/PAE$/)
+          if v.match(/xen$/) or v.match(/PAE$/)
             version = v
             break
           end
@@ -80,6 +116,9 @@ module BoxGrinder
 
     def recreate_kernel_image(guestfs, modules = [])
       kernel_version = kernel_version(guestfs)
+
+      raise "Cannot find valid kernel installs in the appliance. Make sure you have your kernel installed in '/lib/modules'." if kernel_version.nil?
+
       kernel_image_name = kernel_image_name(guestfs)
 
       if guestfs.exists("/sbin/dracut") != 0
