@@ -8,6 +8,7 @@ v0.10.0
 * [BGBUILD-195] Add support for OpenStack
 * [BGBUILD-304] Standarize plugin callbacks
 * [BGBUILD-325] Remove kickstart support
+* [BGBUILD-323] Invalid kernel version recognition makes recreating initrd impossible
 
 v0.9.8
 
